# STSEngine

./: .gitmodules  CMakeLists.txt  README.md
include/: stse.h  stsengine.h
src/: main.c  stse.c  stse_assert.h  stse_exit.c  stse_exit.h  stse_gpu.h  stse_gpu_vulkan.c  stse_log.c  stse_log.h  stse_memory.c  stse_memory.h  stse_result.h  stse_window.c  stse_window.h  stse_window_wayland.c  stsengine.c
